log/build_2025-09-10_20-21-11/path_planner/stderr.log
  File "/home/eleanorlow/spcrob/ros_ws2/install/path_planner/lib/python3.10/site-packages/path_planner/graph_search.py", line 288
    if unvisited_set[node_in_unvisited_idx] > 0
                                               ^
SyntaxError: expected ':'

